--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-20 [台湾股市遭遇黑色星期五，创单日最大跌点纪录](/articles/voa/1016262.md)
+
 4-20 [从硬件到软件到芯片 中国新式自力更生的步伐迈得有多远？](/articles/voa/1016263.md)
 
 4-19 [以色列以战止战，中国会调停伊朗就此休兵?](/articles/voa/1016264.md)
@@ -598,6 +600,4 @@
 4-9 [香港通过23条立法后美国反应审慎令社运和民主人士失望](/articles/voa/1016560.md)
 
 4-9 [美国财长警告中国的银行，如果你们支持俄罗斯的战争 美国不会放过你](/articles/voa/1016561.md)
-
-4-8 [美日菲三国峰会本周登场，强化合作联手应对中国威胁](/articles/voa/1016562.md)
 
