--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-20 [众院两党罕见联手，将援助乌克兰以色列及台湾的法案向终点推进；TikTok剥离条款也包括在内](/articles/voa/1016256.md)
+
+4-20 [布林肯：中国是俄罗斯入侵乌克兰军事工业主要供应者](/articles/voa/1016257.md)
+
 4-20 [《反击中国的大博弈》揭示美国如何赢得新冷战](/articles/voa/1016258.md)
 
 4-20 [中国官媒尚未在以色列-伊朗冲突中选边，但网民已指责美国“火上浇油”](/articles/voa/1016259.md)
@@ -596,8 +600,4 @@
 4-9 [缅甸少数民族游击队可能即将从军方手中夺取缅泰边境的一座重要城镇](/articles/voa/1016554.md)
 
 4-9 [拜登、特朗普谈关键外交政策问题](/articles/voa/1016555.md)
-
-4-9 [内塔尼亚胡宣布已确定攻打拉法的日期，美国反对](/articles/voa/1016556.md)
-
-4-9 [处于中印对峙区的拉达克人抗议生存空间备受挤压](/articles/voa/1016557.md)
 
