--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-20 [每日一语 2024.4.19](/articles/cdt/341479.md)
+
 4-20 [林孤小姐｜还是成都更狠啊](/articles/cdt/341483.md)
 
 4-20 [竹不倒｜就算呼声没成功，也应当受保护！](/articles/cdt/341485.md)
@@ -598,6 +600,4 @@
 3-17 [家传研究员｜本想哭庙求公正，岂料包公被强搬](/articles/cdt/342583.md)
 
 3-17 [枫林暖｜热闹的315晚会背后，是消费者的落寞](/articles/cdt/342585.md)
-
-3-17 [沉思的托克维尔｜大明朝没有人才吗？](/articles/cdt/342587.md)
 
