--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-20 [美制裁涉及巴基斯坦弹道导弹计划的四家实体包括三家中国公司](/articles/voa/1016247.md)
+
 4-20 [以色列伊朗从“影子战争”走向直接冲突，美国中东军事战略将受考验](/articles/voa/1016248.md)
 
 4-20 [日本外交蓝皮书重视中国对印太地区的威胁,中国要求日本“纠正错误做法”](/articles/voa/1016249.md)
@@ -598,6 +600,4 @@
 4-9 [美日菲峰会或令联盟关系全面升级，催生又一“微边”安全架构](/articles/voa/1016545.md)
 
 4-9 [拜登、特朗普谈关键国内政策问题](/articles/voa/1016546.md)
-
-4-9 [中国的电动车和绿色科技会在全球遍地开花吗？最新一轮中美贸易战背后的原因是什么？](/articles/voa/1016547.md)
 
