--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-20 [所罗门群岛现总理保住议席 选举结果下星期出炉，与中国关系成关键](/articles/voa/1016245.md)
+
 4-20 [撰写129页校园枪击“宣言”，马里兰华裔高中生被捕](/articles/voa/1016246.md)
 
 4-20 [美制裁涉及巴基斯坦弹道导弹计划的四家实体包括三家中国公司](/articles/voa/1016247.md)
@@ -598,6 +600,4 @@
 4-9 [日本首相抵达美国 开启备受期待的访问](/articles/voa/1016543.md)
 
 4-9 [美参议院共和党领袖敦促对限制TikTok的法案采取行动](/articles/voa/1016544.md)
-
-4-9 [美日菲峰会或令联盟关系全面升级，催生又一“微边”安全架构](/articles/voa/1016545.md)
 
