--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-20 [朝鲜称进行巡航导弹“超大型”弹头试验](/articles/dw/1025851.md)
+
 4-20 [“放水保送”  北京半马冠军被收回金牌](/articles/dw/1025852.md)
 
 4-19 [以伊冲突升级：以色列准备多线作战？](/articles/dw/1025853.md)
@@ -598,6 +600,4 @@
 3-25 [菲律宾就中国海警水炮攻击提出“最强烈抗议”](/articles/dw/1026149.md)
 
 3-25 [巴伐利亚州长索德尔访问中国 要当“敲门砖“](/articles/dw/1026150.md)
-
-3-25 [“网暴“风波中 钟睒睒登胡润排行榜中国“首富“](/articles/dw/1026151.md)
 
