--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-21 [建设性意见｜重庆燃气退费，接下来看成都的了](/articles/cdt/341464.md)
+
 4-20 [张3丰的世界｜川渝燃气危机：一切鬼鬼祟祟都是犯罪](/articles/cdt/341468.md)
 
 4-20 [看客inSight｜漂在非洲的中国商人，在恐惧中等待暴富神话](/articles/cdt/341471.md)
@@ -598,6 +600,4 @@
 3-18 [基本常识｜3名留守儿童杀死留守儿童，北上广的学校因招生不足停办](/articles/cdt/342563.md)
 
 3-18 [【CDT周报】第161期：一纸通稿真能代替现场报道吗？不能。](/articles/cdt/342566.md)
-
-3-17 [海边的西塞罗｜包青天就算复活，哭拜他的人也一定不会喜欢](/articles/cdt/342577.md)
 
