--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [布林肯下周再访中国，美中紧张关系预计仍难实现突破改善](/articles/voa/1016239.md)
+
 4-21 [纽约时报:东京奥运会前23名中国游泳选手药检呈阳性，但仍获准参赛赢得奖牌](/articles/voa/1016240.md)
 
 4-20 [专访艾飞力：习上台后“物质契约”无以为继，人权倒退30年](/articles/voa/1016241.md)
@@ -598,6 +600,4 @@
 4-9 [美中撞机23周年 擦枪走火风险愈来愈多](/articles/voa/1016537.md)
 
 4-9 [死无葬身之地？ 中国人入土难为安](/articles/voa/1016538.md)
-
-4-9 [美国持续警告乌克兰战争之际 俄中同意深化欧亚地区安全合作](/articles/voa/1016539.md)
 
